--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "select2": "^4.1.0-rc.0"
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "fullcalendar": "^6.1.19",
+    "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.22.5"
   }
 }
